--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -108,6 +108,7 @@
 .orderandpay .icon_question:after {content: ''; display: block; clear:both;}
 .orderandpay .icon_question.margin_set_top {margin-top:15px;}
 
+.orderandpay .t_c {text-align: center !important;}
 
 
 /* table */
@@ -1010,10 +1011,11 @@ div.bill_noti div{margin-bottom:5px;}
 .orderandpay .br_list li:first-child {margin-top:0;}
 .orderandpay .black {background: #000 !important;}
 
-.orderandpay .tit_orange {background-color:#000;padding:15px 0;display:block;}
+.orderandpay .tit_orange {background-color:#fff;padding:28px 0;display:block;}
 .orderandpay .tit_orange.full { margin:0px; }
-.orderandpay .tit_orange .tit { color:#fff;padding:5px 20px;border:2px solid #fff;border-radius:15px;line-height:20px;font-size:20px;font-weight:bold;width:240px;text-align:center;margin:0 auto; }
+.orderandpay .tit_orange .tit { color:#000;padding:5px 20px;border:2px solid #000;border-radius:15px;line-height:20px;font-size:20px;font-weight:bold;width:240px;text-align:center;margin:0 auto; }
  
+.orderandpay .myevet_wrap .br_list li .li_a {font-size: 13px; color:#000; font-weight: 500;}
 
 
 .orderandpay .search_tab{margin-top:20px;}
@@ -1196,8 +1198,8 @@ div.bill_noti div{margin-bottom:5px;}
 .orderandpay #my_content .couponbox .cpn_txt span { font-size:1.5em; }
 .orderandpay #my_content .couponbox .cpn_cont { margin-top:10px; }
 .orderandpay #my_content .couponbox .nocoupon { padding: 20px; background-color: #fff; border-radius: 18px; font-size: 1.2em; text-align: center;}
-.orderandpay #my_content .couponbox .box_on{   background-repeat: no-repeat;    margin: 10px 10px;    border: 5px solid #000;    border-radius: 20px;    background: url(http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/common/online_coupon.png) no-repeat 90% center;    background-size: 97px auto;    background-color: #000;}
-
+.orderandpay #my_content .couponbox .box_on{   background-repeat: no-repeat;    margin: 10px 10px;    border: 5px solid #000;    border-radius: 20px;    background: url(http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/common/online_coupon.png) no-repeat right 20px center;    background-size: 97px auto;    background-color: #000;}
+.orderandpay #my_content .my_qua {}
 
 
 @media screen and (max-width: 360px) {
